@@ -219,7 +219,49 @@
             <package>mariadb-common</package>
             <package>mariadb-server-10.1</package>
             <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_10.1>
+        <mariadb_10.2
+                description="MariaDB 10.2 server"
+                class="iMSCP::Servers::Sqld::Mariadb::Debian"
+                repository="http://mirror.netcologne.de/mariadb/repo/10.2/ubuntu bionic main"
+                repository_key_id="C74CD1D8"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="*"
+                pinning_pin="release o=MariaDB,n=bionic"
+                pinning_pin_priority="1001"
+        >
+            <package>mariadb-client-10.2</package>
+            <package>mariadb-common</package>
+            <package>mariadb-server-10.2</package>
+            <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
+        </mariadb_10.2>
+        <mariadb_10.3
+                description="MariaDB 10.3 server"
+                class="iMSCP::Servers::Sqld::Mariadb::Debian"
+                repository="http://mirror.netcologne.de/mariadb/repo/10.3/ubuntu bionic main"
+                repository_key_id="C74CD1D8"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="*"
+                pinning_pin="release o=MariaDB,n=bionic"
+                pinning_pin_priority="1001"
+        >
+            <package>mariadb-client-10.3</package>
+            <package>mariadb-common</package>
+            <package>mariadb-server-10.3</package>
+            <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
+        </mariadb_10.3>
         <percona_5.7
                 description="Percona 5.7 server"
                 class="Servers::sqld::percona"
