@@ -242,6 +242,7 @@
             <package>mariadb-client-5.5</package>
             <package>mariadb-common</package>
             <package>mariadb-server-5.5</package>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_5.5>
         <mariadb_10.0
                 description="MariaDB 10.0 server" class="Servers::sqld::mariadb"
@@ -257,6 +258,10 @@
             <package>mariadb-common</package>
             <package>mariadb-server-10.0</package>
             <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_10.0>
         <mariadb_10.1
                 description="MariaDB 10.1 server"
@@ -273,6 +278,10 @@
             <package>mariadb-common</package>
             <package>mariadb-server-10.1</package>
             <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_10.1>
         <mariadb_10.2
                 description="MariaDB 10.2 server"
@@ -289,6 +298,10 @@
             <package>mariadb-common</package>
             <package>mariadb-server-10.2</package>
             <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_10.2>
         <mariadb_10.3
                 description="MariaDB 10.3 server"
@@ -305,6 +318,10 @@
             <package>mariadb-common</package>
             <package>mariadb-server-10.3</package>
             <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+            <pre_install_task>
+                /usr/bin/printf "[mysqld]\nplugin-load-add = auth_socket.so\n" > /etc/mysql/mariadb.conf.d/50-unix-auth.cnf
+            </pre_install_task>
+            <post_install_task>/usr/sbin/service mysql start</post_install_task>
         </mariadb_10.3>
         <percona_5.5
                 description="Percona 5.5 server"
