@@ -63,6 +63,10 @@ as the i-MSCP installer rely on that default.
 The [preseeding template file](./preseed.pl) has been updated. If you make use of the
 preseeding feature, don't forget to update your preseeding file.
 
+#### SQL server
+
+Support for MariaDB server 10.3 has been added.
+
 ### i-MSCP packages
 
 #### Net2FTP
